[gd_scene load_steps=3 format=3 uid="uid://b4yl30yst7kit"]

[ext_resource type="Script" path="res://scripts/ai.gd" id="1_gd0ky"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dyuqg"]
radius = 450.0

[node name="AI" type="Node2D"]
script = ExtResource("1_gd0ky")
draw_path_line = true

[node name="DetectionZone" type="Area2D" parent="."]
visible = false

[node name="DetectionShape" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource("CircleShape2D_dyuqg")

[node name="PatrolTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PathLine" type="Line2D" parent="."]
width = 2.0
default_color = Color(0.597176, 0.597176, 0.597176, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[connection signal="body_entered" from="DetectionZone" to="." method="_on_detection_zone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_detection_zone_body_exited"]
[connection signal="timeout" from="PatrolTimer" to="." method="_on_patrol_timer_timeout"]
